# controller/struct.go
@@ -30,3 +30,14 @@ type Biodata struct {
 	Doctor        Doctor             `bson:"doctor,omitempty" json:"doctor,omitempty"`
 	MedicalRecord MedicalRecord      `bson:"medicalRecord,omitempty" json:"medicalRecord,omitempty"`
 }
+
+type ReqPasien struct {
+	PasienName    string        `bson:"pasienName,omitempty" json:"pasienName,omitempty"`
+	Gender        string        `bson:"gender,omitempty" json:"gender,omitempty"`
+	TTL           string        `bson:"ttl,omitempty" json:"ttl,omitempty"`
+	Status        string        `bson:"status,omitempty" json:"status,omitempty"`
+	Phone_number  string        `bson:"phonenumber,omitempty" json:"phonenumber,omitempty"`
+	Alamat        string        `bson:"alamat,omitempty" json:"alamat,omitempty"`
+	Doctor        Doctor        `bson:"doctor,omitempty" json:"doctor,omitempty"`
+	MedicalRecord MedicalRecord `bson:"medicalRecord,omitempty" json:"medicalRecord,omitempty"`
+}
